libs/toolkit-contract-macros-tests/tests/ui/fail/proto_bridge_missing_stub.rs
//! `#[derive(ProtoBridge)]` requires `#[proto_bridge(stub = "...")]` — must fail.

use toolkit_contract::ProtoBridge;

#[derive(ProtoBridge)]
pub struct Request {
    pub amount: i64,
}

fn main() {}
